--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,6 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.+'
     testCompile group: 'commons-io', name: 'commons-io', version: '2.4+'
+    compile 'org.codehaus.jackson:jackson-core-asl:1.9.13'
+    compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
 }
