--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,6 @@ dependencies {
     testCompile group: 'commons-io', name: 'commons-io', version: '2.4+'
     compile 'org.codehaus.jackson:jackson-core-asl:1.9.13'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
+    compile 'org.slf4j:slf4j-api:1.7.10'
+    compile 'org.slf4j:slf4j-simple:1.7.10'
 }
