--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,5 @@ dependencies {
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
     compile 'org.slf4j:slf4j-api:1.7.10'
     compile 'org.slf4j:slf4j-simple:1.7.10'
+    compile 'javax.mail:mail:1.5.0-b01'
 }
