--- a/build.gradle
+++ b/build.gradle
@@ -18,4 +18,5 @@ dependencies {
     compile 'org.slf4j:slf4j-simple:1.7.10'
     compile 'javax.mail:mail:1.5.0-b01'
     compile 'org.apache.pdfbox:pdfbox:1.8.8'
+    compile 'commons-io:commons-io:2.4'
 }
